--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="./styleContact.css" />
     <title>Document</title>
   </head>
+  
   <body>
     <!-- Header -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
          <a class="navbar-brand" id="navbar-brand" href="#">Shady Saleh</a>
-         <button
+         <!-- <button
            class="navbar-toggler"
            type="button"
            data-toggle="collapse"
@@ -28,7 +29,7 @@
          >
            <span class="navbar-toggler-icon"></span>
          </button>
-         <div class="collapse navbar-collapse" id="navbarNav"></div>
+         <div class="collapse navbar-collapse" id="navbarNav"></div> -->
          <ul class="navbar-nav">
            <li class="nav-item active">
              <a class="nav-link" href="index.html"
