--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" id="navbar-brand" href="#">Shady Saleh</a>
-        <button
+        <!-- <button
           class="navbar-toggler"
           type="button"
           data-toggle="collapse"
@@ -29,12 +29,14 @@
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav"></div>
+        </button> -->
+        <!-- <div class="collapse navbar-collapse" id="navbarNav"></div> -->
+
+
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html"
-              >Home <span class="sr-only">(current)</span></a
+            <a class="nav-link" href="index.html" style="color: gray"
+              >About <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
@@ -60,20 +62,20 @@
     <section>
       <div class="aboutMe">
         <h1>About Me</h1>
-        <hr />
+        <hr style=" border-width:4px">
         <img src="./image/pic.jpg" alt="shady's personal picture" />
-        <p>
+        <p class="p1">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis,
           ratione ipsam eaque dolore quia animi magnam ea quis delectus, quam
           aut dolorem architecto doloremque adipisci suscipit? Nemo et quod
-          omnis.
+          omnis. Lorem, ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit, amet consectetur adipisicing. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi?
         </p>
 
         <p class="p2">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum
           voluptatibus veritatis asperiores autem cupiditate quidem, officiis
           voluptates placeat tenetur sit nemo, soluta non ipsum reprehenderit
-          blanditiis. Aliquam quibusdam magni quos!
+          blanditiis. Aliquam quibusdam magni quos! Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, ea recusandae. Lorem, ipsum dolor.
         </p>
       </div>
     </section>
