Finished the About and Contact pages

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
          <ul class="navbar-nav">
            <li class="nav-item active">
              <a class="nav-link" href="index.html"
-               >Home <span class="sr-only">(current)</span></a
+               >About <span class="sr-only">(current)</span></a
              >
            </li>
            <li class="nav-item">
@@ -55,26 +55,28 @@
        </nav>
     </header>
 
+    
     <form action="">
       <h1>Contact</h1>
 
       <hr />
 
-      <label for="">Name</label>
+      <label for="">Name:</label>
       <br />
       <input type="text" placeholder="Enter Your Name" />
       <br />
-      <label for="">Email</label>
+      <label for="">Email:</label>
       <br />
       <input type="email" placeholder="Example@gmail.com" />
       <br />
-      <label for="">Message</label>
+      <label for="">Message:</label>
       <br />
-      <textarea name="" id="" cols="98%" rows="10"></textarea>
+      <textarea name="" id="" cols="70" rows="10"></textarea>
+
       <br />
       <button>Submit</button>
     </form>
-
+    
     <footer>
       <p>Copyright</p>  
     </footer>
