--- a/contact.html
+++ b/contact.html
@@ -10,52 +10,33 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./styleContact.css" />
-    <title>Document</title>
+    <title>Contact</title>
   </head>
-  
+
   <body>
     <!-- Header -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <a class="navbar-brand" id="navbar-brand" href="#">Shady Saleh</a>
-         <!-- <button
-           class="navbar-toggler"
-           type="button"
-           data-toggle="collapse"
-           data-target="#navbarNav"
-           aria-controls="navbarNav"
-           aria-expanded="false"
-           aria-label="Toggle navigation"
-         >
-           <span class="navbar-toggler-icon"></span>
-         </button>
-         <div class="collapse navbar-collapse" id="navbarNav"></div> -->
-         <ul class="navbar-nav">
-           <li class="nav-item active">
-             <a class="nav-link" href="index.html"
-               >About <span class="sr-only">(current)</span></a
-             >
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="portfolio.html">Portfolio</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="contact.html">Contact</a>
-           </li>
-           <!-- <li class="nav-item">
-             <a
-               class="nav-link disabled"
-               href="#"
-               tabindex="-1"
-               aria-disabled="true"
-               >Disabled</a
-             > -->
-           </li>
-         </ul>
-       </nav>
+        <a class="navbar-brand" id="navbar-brand" href="#">Shady Saleh</a>
+
+        <!-- <div class="collapse navbar-collapse" id="navbarNav"></div> -->
+
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"
+              >About <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
-    
     <form action="">
       <h1>Contact</h1>
 
@@ -71,14 +52,14 @@
       <br />
       <label for="">Message:</label>
       <br />
-      <textarea name="" id="" cols="70" rows="10"></textarea>
+      <textarea name="" id="textstuff" rows="10"></textarea>
 
       <br />
       <button>Submit</button>
     </form>
-    
+
     <footer>
-      <p>Copyright</p>  
+      <p>Copyright</p>
     </footer>
   </body>
 </html>
