--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <!-- Header -->
@@ -22,25 +22,16 @@
         <!-- <div class="collapse navbar-collapse" id="navbarNav"></div> -->
 
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html" style="color: gray"
+          <li class="nav-item active" class="li">
+            <a class="nav-link" href="index.html" style="color: gray;"
               >About <span class="sr-only">(current)</span></a
             >
           </li>
-          <li class="nav-item">
+          <li class="nav-item" class="li">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" class="li">
             <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <!-- <li class="nav-item">
-            <a
-              class="nav-link disabled"
-              href="#"
-              tabindex="-1"
-              aria-disabled="true"
-              >Disabled</a
-            > -->
           </li>
         </ul>
       </nav>
@@ -50,26 +41,30 @@
     <section>
       <div class="aboutMe">
         <h1>About Me</h1>
-        <hr style=" border-width:4px">
+        <hr style="border-width: 4px;" />
         <img src="./image/pic.jpg" alt="shady's personal picture" />
         <p class="p1">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis,
           ratione ipsam eaque dolore quia animi magnam ea quis delectus, quam
           aut dolorem architecto doloremque adipisci suscipit? Nemo et quod
-          omnis. Lorem, ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit, amet consectetur adipisicing. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi?
+          omnis. Lorem, ipsum dolor sit amet consectetur adipisicing. Lorem
+          ipsum dolor sit, amet consectetur adipisicing. Lorem ipsum dolor sit
+          amet consectetur adipisicing elit. Eligendi?
         </p>
 
         <p class="p2">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum
           voluptatibus veritatis asperiores autem cupiditate quidem, officiis
           voluptates placeat tenetur sit nemo, soluta non ipsum reprehenderit
-          blanditiis. Aliquam quibusdam magni quos! Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, ea recusandae. Lorem, ipsum dolor.
+          blanditiis. Aliquam quibusdam magni quos! Lorem ipsum dolor sit amet.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, ea
+          recusandae. Lorem, ipsum dolor.
         </p>
       </div>
     </section>
 
     <footer>
-       <p>Copyright</p>  
+      <p>Copyright</p>
     </footer>
   </body>
 </html>
