--- a/contact.html
+++ b/contact.html
@@ -1,65 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./styleContact.css" />
-    <title>Contact</title>
-  </head>
 
-  <body>
-    <!-- Header -->
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" id="navbar-brand" href="#">Shady Saleh</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./styleContact.css" />
+  <title>Contact</title>
+</head>
 
-        <!-- <div class="collapse navbar-collapse" id="navbarNav"></div> -->
+<body>
+  <!-- Header -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" id="navbar-brand" href="#">Shady Saleh</a>
 
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"
-              >About <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+      <div class="collapse navbar-collapse" id="navbarNav"></div>
 
-    <form action="">
-      <h1>Contact</h1>
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item" class="li">
+          <a class="nav-link" href="portfolio.html">Blog</a>
+        </li>
+        <li class="nav-item" class="li">
+          <a class="nav-link" href="portfolio.html">Project</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-      <hr />
+  <form action="">
+    <h1>Contact</h1>
 
-      <label for="">Name:</label>
-      <br />
-      <input type="text" placeholder="Enter Your Name" />
-      <br />
-      <label for="">Email:</label>
-      <br />
-      <input type="email" placeholder="Example@gmail.com" />
-      <br />
-      <label for="">Message:</label>
-      <br />
-      <textarea name="" id="textstuff" rows="10"></textarea>
+    <hr />
 
-      <br />
-      <button>Submit</button>
-    </form>
+    <label for="">Name:</label>
+    <br />
+    <input type="text" placeholder="Enter Your Name" />
+    <br />
+    <label for="">Email:</label>
+    <br />
+    <input type="email" placeholder="Example@gmail.com" />
+    <br />
+    <label for="">Message:</label>
+    <br />
+    <textarea name="" id="textstuff" rows="10"></textarea>
 
-    <footer>
-      <p>Copyright</p>
-    </footer>
-  </body>
+    <br />
+    <button>Submit</button>
+  </form>
+
+  <footer>
+    <p>Copyright</p>
+  </footer>
+</body>
+
 </html>
