--- a/index.html
+++ b/index.html
@@ -1,70 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Patrons</title>
-  </head>
-  <body>
-    <!-- Header -->
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" id="navbar-brand" href="#">Shady Saleh</a>
-        <!-- <div class="collapse navbar-collapse" id="navbarNav"></div> -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
-        <ul class="navbar-nav">
-          <li class="nav-item active" class="li">
-            <a class="nav-link" href="index.html" style="color: gray;"
-              >About <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item" class="li">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item" class="li">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <link rel="stylesheet" href="style.css" />
 
-    <!-- Content -->
-    <section>
-      <div class="aboutMe">
-        <h1>About Me</h1>
-        <hr style="border-width: 4px;" />
-        <img src="./image/pic.jpg" alt="shady's personal picture" />
-        <p class="p1">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis,
-          ratione ipsam eaque dolore quia animi magnam ea quis delectus, quam
-          aut dolorem architecto doloremque adipisci suscipit? Nemo et quod
-          omnis. Lorem, ipsum dolor sit amet consectetur adipisicing. Lorem
-          ipsum dolor sit, amet consectetur adipisicing. Lorem ipsum dolor sit
-          amet consectetur adipisicing elit. Eligendi?
-        </p>
+  <title>Patrons</title>
+</head>
 
-        <p class="p2">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum
-          voluptatibus veritatis asperiores autem cupiditate quidem, officiis
-          voluptates placeat tenetur sit nemo, soluta non ipsum reprehenderit
-          blanditiis. Aliquam quibusdam magni quos! Lorem ipsum dolor sit amet.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, ea
-          recusandae. Lorem, ipsum dolor.
-        </p>
-      </div>
-    </section>
+<body>
+  <!-- Header -->
+  <header>
 
-    <footer>
-      <p>Copyright</p>
-    </footer>
-  </body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" id="navbar-brand" href="#">Shady Saleh</a>
+      <div class="collapse navbar-collapse" id="navbarNav"></div>
+
+      <ul class="navbar-nav">
+        <li class="nav-item active" class="li">
+          <a class="nav-link" href="index.html" style="color: gray;">About <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item" class="li">
+          <a class="nav-link" href="#">Blog</a>
+        </li>
+        <li class="nav-item" class="li">
+          <a class="nav-link" href="project.html">Project</a>
+        </li>
+        <li class="nav-item" class="li">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Content -->
+  <section id="section">
+    <div class="aboutMe">
+      <h1>About Me</h1>
+      <hr style="border-width: 4px;" />
+      <img src="./image/pic.jpg" alt="shady's personal picture" />
+      <p class="p1">
+        Hello, I'm Shady Saleh from Egypt living in California. I'm a Full Stack Web Developer with a background in
+        Computer Science and life-long commitment to learning and growing in the technical field. I am dedicated to
+        combining creativity and problem solving to develop clean code for user-friendly applications and websites. I
+        design, build, operate & sometines debug full-stack web applications.
+      </p>
+      <p class="p2">
+        I am known among staff for leadership and attention to detail no matter the
+        complexity of the project. I'm aiming to develop my own online retail company by utilizing sales channels like
+        Amazon & eBay Marketplaces.
+      </p>
+      <p class="p3">
+        Feel free to take a look at my latest <a href="project.html">Projects</a>. Also, please don't hesitate to <a
+          href="mailto:shadysaleh01@gmail.com">Email</a> me for collaborative project ideas.
+
+      </p>
+    </div>
+    <div class="socialDiv">
+      <a href="https://github.com/shadysaleh01" alt="Shady Saleh Github account" target="blank"><i
+          class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/shady-saleh01/" alt="Shady Saleh linkedin account" target="blank"><i
+          class="fab fa-linkedin"></i></a>
+      <a href="mailto:shadysaleh01@gmail.com" alt="Send an email to Shady Saleh" target="blank"><i
+          class="far fa-envelope"></i></a>
+      <a href="https://www.facebook.com/ShadiMSaleh/" target="blank"><i class="fab fa-facebook-square"></i></a>
+    </div>
+
+  </section>
+
+  <footer>
+    <p>Copyright</p>
+  </footer>
+</body>
+
 </html>
