--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
       <div class="collapse navbar-collapse" id="navbarNav"></div>
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item" class="li">
           <a class="nav-link" href="portfolio.html">Blog</a>
@@ -41,26 +41,30 @@
       <div class="row">
         <div class="col-sm-6" id="coll">
           <img src="./image/pic2.jpg" alt="" />
-          <div class="pm">Word Guess</div>
+          <div class="pm">AI Face Detection</div>
         </div>
         <div class="col-sm-6" id="coll">
           <img src="./image/pic3.jpg" alt="" />
-          <div class="pm">RPG Game</div>
+          <div class="pm">Code Quiz</div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-sm-6" id="coll">
           <img src="./image/pic4.jpg" alt="" />
-          <div class="pm">Trivia Game</div>
+          <div class="pm">Password_Generator</div>
         </div>
         <div class="col-sm-6" id="coll">
           <img src="./image/pic5.jpg" alt="" />
-          <div class="pm">Info Widget</div>
+          <div class="pm">Work Dau Scheduler</div>
         </div>
       </div>
 
       <div class="row">
+        <div class="col-sm-6" id="coll">
+          <img src="./image/pic6.jpg" alt="" />
+          <div class="pm">User Accessibility</div>
+        </div>
         <div class="col-sm-6" id="coll">
           <img src="./image/pic6.jpg" alt="" />
           <div class="pm">Rack Paper Scissors</div>
