Edited CSS files

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
   <!-- Header -->
+
   <header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -26,9 +27,6 @@
       <ul class="navbar-nav">
         <li class="nav-item active" class="li">
           <a class="nav-link" href="index.html" style="color: gray;">About <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item" class="li">
-          <a class="nav-link" href="#">Blog</a>
         </li>
         <li class="nav-item" class="li">
           <a class="nav-link" href="project.html">Project</a>
@@ -76,7 +74,7 @@
   </section>
 
   <footer>
-    <p>Copyright</p>
+    <p>My Portfolio ©2020. All rights reserved</p>
   </footer>
 </body>
 
