--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,6 @@
           <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item" class="li">
-          <a class="nav-link" href="portfolio.html">Blog</a>
-        </li>
-        <li class="nav-item" class="li">
           <a class="nav-link" href="portfolio.html">Project</a>
         </li>
         <li class="nav-item">
@@ -57,7 +54,7 @@
   </form>
 
   <footer>
-    <p>Copyright</p>
+    <p>My Portfolio ©2020. All rights reserved</p>
   </footer>
 </body>
 
