--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./stylePortfolio.css" />
+  <link rel="stylesheet" href="./styleProject.css" />
   <title>Portfolio</title>
 </head>
 
@@ -19,9 +19,6 @@
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item" class="li">
-          <a class="nav-link" href="portfolio.html">Blog</a>
         </li>
         <li class="nav-item" class="li">
           <a class="nav-link" href="portfolio.html">Project</a>
@@ -74,7 +71,7 @@
   </section>
 
   <footer>
-    <p>Copyright</p>
+    <p>My Portfolio ©2020. All rights reserved</p>
   </footer>
 </body>
 
