Linked HTML project to it's Github projects

--- a/project.html
+++ b/project.html
@@ -37,30 +37,40 @@
 
       <div class="row">
         <div class="col-sm-6" id="coll">
-          <img src="./image/pic2.jpg" alt="" />
-          <div class="pm">AI Face Detection</div>
+          <a href="https://moelak.github.io/face-and-mouth-detection/" target="blank"><img src="./image/pic2.jpg"
+              alt="AI Face Detection Project" />
+            <div class="pm">AI Face Detection</div>
+          </a>
         </div>
         <div class="col-sm-6" id="coll">
-          <img src="./image/pic3.jpg" alt="" />
-          <div class="pm">Code Quiz</div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-6" id="coll">
-          <img src="./image/pic4.jpg" alt="" />
-          <div class="pm">Password_Generator</div>
-        </div>
-        <div class="col-sm-6" id="coll">
-          <img src="./image/pic5.jpg" alt="" />
-          <div class="pm">Work Dau Scheduler</div>
+          <a href="https://shadysaleh01.github.io/WepAPIs-Quiz/" target="blank">
+            <img src="./image/pic3.jpg" alt="Code Quiz Project" />
+            <div class="pm">Code Quiz</div>
+          </a>
         </div>
       </div>
 
       <div class="row">
         <div class="col-sm-6" id="coll">
-          <img src="./image/pic6.jpg" alt="" />
-          <div class="pm">User Accessibility</div>
+          <a href="https://shadysaleh01.github.io/password_Generator/" target="blank">
+            <img src="./image/pic4.jpg" alt="Password Generator Project" />
+            <div class="pm">Password_Generator</div>
+          </a>
+        </div>
+        <div class="col-sm-6" id="coll">
+          <a href="https://shadysaleh01.github.io/Work-Day-Scheduler/" target="blank">
+            <img src="./image/pic5.jpg" alt="Work Dau Scheduler Project" />
+            <div class="pm">Work Dau Scheduler</div>
+          </a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6" id="coll">
+          <a href="https://shadysaleh01.github.io/User-Accessibility-Project/" target="blank">
+            <img src="./image/pic6.jpg" alt="User Accessibility Project" />
+            <div class="pm">User Accessibility</div>
+          </a>
         </div>
         <div class="col-sm-6" id="coll">
           <img src="./image/pic6.jpg" alt="" />
