--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
           <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item" class="li">
-          <a class="nav-link" href="portfolio.html">Project</a>
+          <a class="nav-link" href="project.html">Project</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
