Edited about me section

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       <hr style="border-width: 4px;" />
       <img src="./image/pic.jpg" alt="shady's personal picture" />
       <p class="p1">
-        Hello, I'm Shady Saleh from Egypt living in California. I'm a Full Stack Web Developer with a background in
+        Hello, I'm Shady Saleh! I live in California. I'm a Full Stack Developer with a background in
         Computer Science and life-long commitment to learning and growing in the technical field. I am dedicated to
         combining creativity and problem solving to develop clean code for user-friendly applications and websites. I
-        design, build, operate & sometines debug full-stack web applications.
+        design, build, operate & sometimes debug web applications.
       </p>
       <p class="p2">
         I am known among staff for leadership and attention to detail no matter the
